# hairy

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE.md  Procfile  README.md  Setup.hs  hairy.cabal  stack.yaml
benchmark/: Main.hs
executable/: Main.hs
test-suite/: Main.hs
