name: hairy
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2014 Taylor Fausak <taylor@fausak.me>
maintainer: Taylor Fausak <taylor@fausak.me>
homepage: https://github.com/tfausak/hairy
bug-reports: https://github.com/tfausak/hairy/issues
synopsis: TODO
description:
    TODO
category: Web
author: Taylor Fausak <taylor@fausak.me>
tested-with: GHC ==7.8.*
extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md
 
source-repository head
    type: git
    location: git://github.com/tfausak/hairy.git
 
library
    build-depends:
        base ==4.*
    exposed-modules:
        Hairy
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: library
 
 