name: hairy
version: 0.1.2
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2014 Taylor Fausak <taylor@fausak.me>
maintainer: Taylor Fausak <taylor@fausak.me>
homepage: https://github.com/tfausak/hairy
bug-reports: https://github.com/tfausak/hairy/issues
synopsis: A JSON REST API
description:
    Hairy is a JSON REST API.
    .
    Check out <https://github.com/tfausak/hairy#readme the readme> for
    documentation.
category: Web
author: Taylor Fausak <taylor@fausak.me>
tested-with: GHC ==7.6.* GHC ==7.8.*
extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md
 
source-repository head
    type: git
    location: git://github.com/tfausak/hairy.git
 
library
    build-depends:
        base ==4.*,
        aeson >=0.7 && <0.9,
        data-default ==0.5.*,
        http-types ==0.8.*,
        mtl ==2.*,
        monad-logger ==0.3.*,
        persistent ==2.*,
        persistent-postgresql ==2.*,
        persistent-template ==2.*,
        scotty ==0.9.*,
        text ==1.*,
        time ==1.*,
        transformers >=0.3 && <0.5,
        wai ==3.*,
        wai-extra ==3.*,
        warp ==3.*
    exposed-modules:
        Hairy
        Hairy.Models
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: library
 
executable hairy
    build-depends:
        base -any,
        hairy -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: executable
 
test-suite hspec
    build-depends:
        base -any,
        hairy -any,
        hspec ==1.*,
        http-types -any,
        mtl -any,
        persistent -any,
        scotty -any,
        time -any,
        wai -any,
        wai-extra -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall -Werror
 
benchmark criterion
    build-depends:
        base -any,
        hairy -any,
        criterion >=0.8 && <2,
        http-types -any,
        mtl -any,
        persistent -any,
        scotty -any,
        time -any,
        wai -any,
        wai-extra -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: benchmark